# USDTBRL

./: .gitignore  .pre-commit-config.yaml  DASHBOARD_AND_LOCK_HOTFIX_NOTES.md  DASHBOARD_HOTFIX_NOTES.md  DASHBOARD_MARKET_PINS_AND_BOT_TABLE_NOTES.md  DASHBOARD_OPERACOES_BOT_PANEL_NOTES.md  DASHBOARD_PATCH_NOTES.md  PATCH_MANIFEST.json  PRELIVE_PATCH_NOTES.md  README.md  RUNBOOK_OPERACIONAL.md  SIDEBAR_ALERT_PATCH_NOTES.md  SIDEBAR_VISIBILITY_HOTFIX_NOTES.md  _memory_  bot.py  config.live.yml  config.yml  dashboard.py  pyproject.toml  requirements.txt  usdtbrl_live_reconcile_patch_notes.md  watchdog_ntfy_fix.patch
config/: backtest.yml  backtest_valid_5m.yml  backtest_valid_5m_freshdb.yml  config.yml  feature_flags.yaml  feature_flags_live_100usdt.yaml  feature_flags_paper_7d.yaml  live.yml  live_100usdt.yml  logging_config.py  paper_7d.yml
data/: usdtbrl_live.sqlite
docs/: ARCHITECTURE.md  LEGACY_COMPATIBILITY.md  PAPER_CHECKLIST.MD  PAPER_PROTOCOL.MD  ROLLOUT.md  SHADOW_MODE.md
scripts/: backfill_market_cache.py  backup_db.py  backup_live_db.ps1  check_single_instance.py  download_binance_klines.py  evaluate_strategy.py  export_daily_summary.py  expport_daily_summary.py  generate_ai_rollout_report.py  healthcheck.py  install_watchdog_health_ntfy.ps1  migrate_db.py  run_ai_live_partial.py  run_ai_paper_decision.py  run_paper_preflight.py  run_phase_d_checks.py  run_shadow_mode.py  sanitize_snapshot.py  smoke_runtime.py  start_live_100usdt.ps1  validate_config.py  watchdog_health_ntfy.ps1
smartcrypto/: config.py
tests/: conftest.py  test_phase_b_hardening.py  (+2 more)
(+183 files in other folders)
