[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartcrypto-usdtbrl"
version = "0.1.0"
description = "Bot profissional de trading USDT/BRL com dashboard Streamlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "plotly>=5.20",
    "PyYAML>=6.0",
    "requests>=2.31",
    "streamlit>=1.32",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "types-PyYAML",
    "types-requests",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["smartcrypto*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
mypy_path = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
